--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
+    "eslint-plugin-react": "^7.32.2",
     "prisma": "^4.14.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.0",
     "fastify": "^4.17.0"
   }
 }
